<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_object_merger</name>
  <version>0.0.1</version>
  <description>Merges radar objects based on ego vehicle speed.</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache License 2.0</license> <!-- Choose an appropriate license -->

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_perception_msgs</depend> <!-- Changed from autoware_auto_perception_msgs -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>autoware_utils</depend> <!-- Changed from tier4_autoware_utils -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
